--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore Github Test</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="header">     
+      <div class="item">
+        <h1>Hi I Am Explore Github</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, mollitia porro! Itaque nemo repellendus minima. Dicta a iure fugiat vitae fugit unde quam. Eaque aperiam quasi doloremque dolor? Exercitationem, quasi ab expedita iste corrupti similique et est magni numquam dignissimos odit neque. Optio vitae veniam, fugit perferendis voluptatem veritatis quidem?</p>
+      </div>
+
+      <div class="item">
+        <h1>Hi I Am Explore Github</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, mollitia porro! Itaque nemo repellendus minima. Dicta a iure fugiat vitae fugit unde quam. Eaque aperiam quasi doloremque dolor? Exercitationem, quasi ab expedita iste corrupti similique et est magni numquam dignissimos odit neque. Optio vitae veniam, fugit perferendis voluptatem veritatis quidem?</p>
+      </div>
+
+      <div class="item">
+        <h1>Hi I Am Explore Github</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, mollitia porro! Itaque nemo repellendus minima. Dicta a iure fugiat vitae fugit unde quam. Eaque aperiam quasi doloremque dolor? Exercitationem, quasi ab expedita iste corrupti similique et est magni numquam dignissimos odit neque. Optio vitae veniam, fugit perferendis voluptatem veritatis quidem?</p>
+      </div>
+
+      <div class="item">
+        <h1>Hi I Am Explore Github</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, mollitia porro! Itaque nemo repellendus minima. Dicta a iure fugiat vitae fugit unde quam. Eaque aperiam quasi doloremque dolor? Exercitationem, quasi ab expedita iste corrupti similique et est magni numquam dignissimos odit neque. Optio vitae veniam, fugit perferendis voluptatem veritatis quidem?</p>
+      </div>
+
+      <div class="item">
+        <h1>Hi I Am Explore Github</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, mollitia porro! Itaque nemo repellendus minima. Dicta a iure fugiat vitae fugit unde quam. Eaque aperiam quasi doloremque dolor? Exercitationem, quasi ab expedita iste corrupti similique et est magni numquam dignissimos odit neque. Optio vitae veniam, fugit perferendis voluptatem veritatis quidem?</p>
+      </div>
+
+      <div class="item">
+        <h1>Hi I Am Explore Github</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, mollitia porro! Itaque nemo repellendus minima. Dicta a iure fugiat vitae fugit unde quam. Eaque aperiam quasi doloremque dolor? Exercitationem, quasi ab expedita iste corrupti similique et est magni numquam dignissimos odit neque. Optio vitae veniam, fugit perferendis voluptatem veritatis quidem?</p>
+      </div>
+    </header>
+  
 </body>
 </html>
