adding some blog

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div class="hero">
+        <h1>Welcome to my new websie</h1>
+    </div>
     <header class="header">     
       <div class="item">
         <h1>Hi I Am Explore Github</h1>
