more picture and code added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore Github Test</title>
+    <title>Github Test</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -39,6 +39,12 @@
       <div class="item">
         <h1>Hi I Am Explore Github</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, mollitia porro! Itaque nemo repellendus minima. Dicta a iure fugiat vitae fugit unde quam. Eaque aperiam quasi doloremque dolor? Exercitationem, quasi ab expedita iste corrupti similique et est magni numquam dignissimos odit neque. Optio vitae veniam, fugit perferendis voluptatem veritatis quidem?</p>
+      </div>
+      <div class="photo">
+        <img src="https://lh3.googleusercontent.com/p/AF1QipNuZdYEWYmR4HjpvLDkaYooFBt2BRxropVciiJ0=s680-w680-h510" alt="Web picture">
+
+        <img src="https://lh3.googleusercontent.com/p/AF1QipNuZdYEWYmR4HjpvLDkaYooFBt2BRxropVciiJ0=s680-w680-h510" alt="Web picture">
+       
       </div>
     </header>
   
